--- a/FrontExact/src/app/Tarea/actualizar/actualizar.component.html
+++ b/FrontExact/src/app/Tarea/actualizar/actualizar.component.html
@@ -1,3 +1,14 @@
+<style>
+    .btn {
+    transition: all 0.3s ease-in-out;
+    background-color: #1976d2;
+    color: white;
+    height: 40px;
+    width: 150px;
+  }
+</style>
+
+
 <div class="container col-md-6">
     <div class="card">
         <div class="card-header">
@@ -11,9 +22,15 @@
                 </div>
                 <div class="form-group">
                     <label for=""> Estado:</label>
-                    <input type="text" class="form-control"  [(ngModel)]="modelTarea.estado" name="estado">
-                </div>        
-                <button (click)="Actualizar(modelTarea)" class="btn btn-info">Actualizar</button>
+                    <select [(ngModel)]="modelTarea.estado" name="estado" class="form-control">
+                        <option [value]="0" [selected]="modelTarea.estado === 0">Incompleto</option>
+                        <option [value]="1" [selected]="modelTarea.estado === 1">Finalizado</option>
+                        <option [value]="2" [selected]="modelTarea.estado >= 2">Eliminada</option>
+                    </select>
+                </div>  
+                <div style="margin-top: 30px;"></div>
+                <button (click)="Actualizar(modelTarea)" class="btn">Actualizar</button>
+                <button (click)="goBack()" class="btn" style="margin-left: 770px;">Atrás</button>
             </form>
         </div>
     </div>
