--- a/FrontExact/src/app/Tarea/insertar/insertar.component.html
+++ b/FrontExact/src/app/Tarea/insertar/insertar.component.html
@@ -1,7 +1,31 @@
+
+<style>
+    .btn {
+    transition: all 0.3s ease-in-out;
+    background-color: #1976d2;
+    color: white;
+    height: 40px;
+    width: 150px;
+  }
+  .small-header {
+        font-size: 24px;
+    }
+  .card-body {
+        padding: 20px;
+        box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.1);
+        border-radius: 10px;
+        overflow: hidden;
+    }
+    .highlight {
+        background-color: rgba(255, 255, 0, 0.163);
+    }
+
+</style>
+
 <div class="container col-md-6">
     <div class="card">
         <div class="card-header">
-            <h1>Tareas</h1>
+            <h1 class="small-header">Tareas</h1>
         </div>
         <div class="card-body">
             <form action="">
@@ -9,7 +33,7 @@
                     <label for=""> Nombre:</label>
                     <input type="text" class="form-control" [(ngModel)]="modelTarea.nombre" name="nombre" >
                 </div>
-                <button (click)="Insertar(modelTarea)" class="btn btn-info">Insertar</button>
+                <button (click)="Insertar(modelTarea)" class="btn">Insertar</button>
             </form>
         </div>
     </div>
